# Standard_Inspect_Demo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  LICENSE  Standard_Inspect_Demo.7z
cmake/fetch/: OpenCV.cmake  Qt5.cmake  concurrentqueue.cmake  json.cmake  spdlog.cmake  third_party.cmake  wikky_dll.cmake  yamlcpp.cmake
example/: CMakeLists.txt
example-demo/: CMakeLists.txt
example-demo/algo_demo/: CMakeLists.txt  algo_demo.cpp  algo_demo.h  algo_demo.ui  main.cpp
example/QMyTreeWidget/: QMyTreeWidget.h
example/algo_demo_QT/: CMakeLists.txt  algo_demo.cpp  algo_demo.h  algo_demo.ui  imagewatch.cpp  imagewatch.h  main.cpp
example/algo_demo_clone/: CMakeLists.txt  main.cpp
example/algosettingdlg/: CMakeLists.txt  algosettingdlg.cpp  algosettingdlg.h  algosettingdlg.ui  mygraphicsview.cpp  mygraphicsview.h
src/: CMakeLists.txt
src/algosettingdlg/: CMakeLists.txt  algosettingdlg.cpp  algosettingdlg.h  algosettingdlg.ui  mygraphicsview.cpp  mygraphicsview.h
src/basealg/: CMakeLists.txt  ibasealgorithm.h  icameradevice.h
src/foundation_alg/: CMakeLists.txt  foundation.cpp  foundation.h  implfoundation.cpp  implfoundation.h
src/util/: CMakeLists.txt
src/util/QMyTreeWidget/: CMakeLists.txt  QMyTreeWidget.cpp  QMyTreeWidget.h
src/util/common/: CMakeLists.txt  common.cpp  common.h
src/util/log/: CMakeLists.txt  logger.h
